# doing2done

./: .env.example  .gitignore  CONTRIBUTING.md  INTERFACES.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
.wrangler/cache/: wrangler-account.json
evals/: cases.py
scripts/: com.doing2done.digest.plist.tmpl  com.doing2done.surface.plist.tmpl  com.doing2done.sync.plist  com.doing2done.sync.plist.tmpl  install-scheduler.sh  run-push.sh  run.sh
src/doing2done/: __init__.py  ask.py  backup.py  calendar.py  capture.py  cli.py  config.py  daily.py  digest.py  draft.py  enrich.py  entities.py  eval.py  health.py  init.py  librarian.py  linkcheck.py  mcp_server.py  notify.py  pipeline.py  push_payload.py  relate.py  reports.py  retry.py  share.py  state.py  todo.py  usage.py  vault.py
src/doing2done/classify/: __init__.py  classifier.py  models.py  (+1 more)
tests/: test_daily_index.py  test_drafts_index.py  test_entities.py  test_insights_links.py  test_linkcheck.py  test_markdown_provider.py  test_note_tags.py  test_notes_index.py  test_pipeline.py  test_providers.py  test_push_payload.py  test_share.py  test_state.py  test_state_created_at.py  test_tags.py  test_vault.py  test_vault_dates.py  test_vault_prune.py  test_vision_failures.py  test_vision_retry_cap.py
vault-template/: .gitattributes  README.md  package.json
vault-template/docs/: index.md
worker/: icons.json  package.json  schema.sql  tsconfig.json  wrangler.toml  wrangler.toml.example
worker/migrations/: 002_captures.sql  003_refine.sql  004_shares.sql
worker/src/: index.ts
(+18 files in other folders)
