[project]
name = "doing2done"
version = "0.1.0"
description = "Apple Notes handwriting -> smart TickTick todos + a private note vault."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
ocr = ["pyobjc-framework-Vision>=10.3", "pyobjc-framework-Quartz>=10.3"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
d2d = "doing2done.cli:app"
d2d-mcp = "doing2done.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doing2done"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
